* 2013-10-27 - thorben.betten@open-xchange.com

 - Fix for bug 29274: Create user-individual publication folders for published E-Mail attachments that exceed user quota

* 2013-10-25 - thorben.betten@open-xchange.com

 - Fix for bug 29484: Copy binary stream to support repetitive access to data if mail needs to be processed (e.g. "special" Apple Mailer structure)

* 2013-10-24 - steffen.templin@open-xchange.com

 - Fix for Bug 29437: Don't try to write JSON string if the underlying file is empty

* 2013-10-24 - thorben.betten@open-xchange.com

 - Fix for bug 29229: No excessive HTML-escaping when inserting HTML attribute values
 - Fix for bug 29429: Use Java's naming for charset "cp932" that is "MS932"
 - Fix for bug 29469: Use translatable name for Unified Mail's root folder
 - Fix for bug 29350: Check for global address book with respect to user configuration

* 2013-10-24 - martin.herfurth@open-xchange.com

 - Fix for bug 29339: Conflicts for multiday appointments.
 - Fix for bug 29459: TimeZone Component has to be first Element for Outlook (Mac Version).

* 2013-10-23 - thorben.betten@open-xchange.com

 - Fix for bug 29356: Introduced property "com.openexchange.mail.transport.removeMimeVersionInSubParts" to 'transport.properties' to specify
                      whether to remove superfluous "MIME-Version" header from multipart sub-parts on message transport
 - Fix for bug 29353: Synchronize create/update operations on database folders
 - Fix for bug 29436: Accept '*' characters in Content-Type token
 - Fix for bug 29434: Set "Content-Length" header if exact length is known
 - Fix for bug 29400: Check last-accessed time stamp prior to issuing a 102 (Processing) response

* 2013-10-22 - thorben.betten@open-xchange.com

 - Fix for bug 29410: Strictly handle with stream-based access to file data, no temporary storing/conversion to byte array
 - Fix for bug 29412: Escape HTML content prior to writing to output writer
