@@ -1,3 +1,7 @@
+* 2013-10-28 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 24642: Resolve participant information for shared calendar folders as needed
+ 
 * 2013-10-27 - thorben.betten@open-xchange.com
 
  - Fix for bug 29274: Create user-individual publication folders for published E-Mail attachments that exceed user quota
